@@ -129,6 +129,7 @@ void init_connection(socket_struct *ns, const char *from_ip) {
     ns->account_name = NULL;
     ns->account_chars = NULL;
     ns->login_method = 0;
+    ns->notifications = 0;
 
     /* we should really do some checking here - if total clients overflows
      * we need to do something more intelligent, because client id's will start
