@@ -14,6 +14,9 @@ small - this just lets others know that the file has changed if nothing
 else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 
+Add protocol to send quest updates to client.
+Nicolas Weeger 2011-07-23
+
 Make container's contents browsable like the ground view.
 Nicolas Weeger 2011-07-10
 
